--- a/TUGAS SESI 14.ipynb
+++ b/TUGAS SESI 14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "06e5e240-31ab-4317-a4e8-2ef4fe89041d",
    "metadata": {},
    "outputs": [
@@ -40,6 +40,20 @@
       "2. Tampilkan Data\n",
       "3. Exit\n",
       "4. Cari Data\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Pilih menu (1-4):  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keluar dari program.\n"
      ]
     }
    ],
@@ -92,7 +106,7 @@
     "        print(\"Data ditemukan:\", data_siswa[cari_nim])\n",
     "    else:\n",
     "        print(\"Data tidak ditemukan.\")\n",
-    "\n",
+    "3\n",
     "while True:\n",
     "    print(\"\\nMenu:\")\n",
     "    print(\"1. Tambah Data Siswa\")\n",
@@ -113,6 +127,14 @@
     "    else:\n",
     "        print(\"Pilihan tidak valid.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e54fb7c8-fc60-4b84-9033-f1fd63324ff0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
