--- a/TUGAS SESI 14.ipynb
+++ b/TUGAS SESI 14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "06e5e240-31ab-4317-a4e8-2ef4fe89041d",
    "metadata": {},
    "outputs": [
@@ -14,8 +14,7 @@
       "Menu:\n",
       "1. Tambah Data Siswa\n",
       "2. Tampilkan Data\n",
-      "3. Exit\n",
-      "4. Cari Data\n"
+      "3. Exit\n"
      ]
     },
     {
@@ -24,22 +23,22 @@
      "text": [
       "Pilih menu (1-4):  1\n",
       "Masukkan NIM (11 karakter):  20240040290\n",
-      "Masukkan Nama (min 3 karakter):  ASEP\n",
-      "Masukkan Alamat (min 5 karakter):  NUSPUTTT\n",
-      "Masukkan Kelas (TI24H, TI24F, TI24G, TI24A):  TI25J\n"
+      "Masukkan Nama (min 3 karakter):  asep\n",
+      "Masukkan Alamat (min 5 karakter):  kakakakap\n",
+      "Masukkan Kelas (TI24H, TI24F, TI24G, TI24A):  TI24A\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ValueError: Kelas tidak valid! Harus TI24H, TI24F, TI24G, atau TI24A.\n",
+      "Data berhasil ditambahkan.\n",
+      "\n",
       "\n",
       "Menu:\n",
       "1. Tambah Data Siswa\n",
       "2. Tampilkan Data\n",
-      "3. Exit\n",
-      "4. Cari Data\n"
+      "3. Exit\n"
      ]
     },
     {
@@ -58,7 +57,7 @@
     }
    ],
    "source": [
-    "data_siswa = {}\n",
+    "### data_siswa = {}\n",
     "\n",
     "def tambah_data():\n",
     "    try:\n",
@@ -100,19 +99,11 @@
     "    for nim, info in data_siswa.items():\n",
     "        print(f\"NIM: {nim}, Nama: {info['nama']}, Alamat: {info['alamat']}, Kelas: {info['kelas']}\")\n",
     "\n",
-    "def cari_data():\n",
-    "    cari_nim = input(\"Masukkan NIM yang dicari: \")\n",
-    "    if cari_nim in data_siswa:\n",
-    "        print(\"Data ditemukan:\", data_siswa[cari_nim])\n",
-    "    else:\n",
-    "        print(\"Data tidak ditemukan.\")\n",
-    "3\n",
     "while True:\n",
     "    print(\"\\nMenu:\")\n",
     "    print(\"1. Tambah Data Siswa\")\n",
     "    print(\"2. Tampilkan Data\")\n",
     "    print(\"3. Exit\")\n",
-    "    print(\"4. Cari Data\")\n",
     "\n",
     "    pilihan = input(\"Pilih menu (1-4): \")\n",
     "    if pilihan == '1':\n",
